fix: Title and subtile alignment with flexbox

--- a/style.css
+++ b/style.css
@@ -339,6 +339,9 @@ a {
     border-radius: 40px;
     gap: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
